package com.ecommerce.backend.domain.user;

public enum Role {
    BUYER,
    SELLER,
    ADMIN
}
