package com.ecommerce.backend.domain.user.dto;

public record LoginResponse(
    String token,
    UserResponse user
) {}