@startuml user-domain.puml
skinparam classAttributeIconSize 0

package "domain.user" {

    enum Role {
        BUYER
        SELLER
        ADMIN
    }

    class User {
        - id : Long
        - name : String
        - email : String <<unique>>
        - password : String <<hash>>
        - cpf : String <<unique>>
        - phone : String
        - roles : Set<Role>
        - active : boolean
        - createdAt : LocalDateTime
        --
        + getAuthorities() : Collection
        + getUsername() : String
        + isAccountNonLocked() : boolean
        + isEnabled() : boolean
        + prePersist() : void
    }

    class RegisterRequest <<record>> {
        + name : String
        + email : String
        + password : String
        + cpf : String
        + phone : String
    }

    class LoginRequest <<record>> {
        + email : String
        + password : String
    }

    class UserResponse <<record>> {
        + id : Long
        + name : String
        + email : String
        + cpf : String
        + phone : String
        + roles : Set<Role>
        + active : boolean
        + createdAt : LocalDateTime
        --
        + {static} from(User) : UserResponse
    }

    class LoginResponse <<record>> {
        + token : String
        + user : UserResponse
    }

    class UserService {
        - userRepository : UserRepository
        - passwordEncoder : PasswordEncoder
        - jwtService : JwtService
        --
        + register(RegisterRequest) : UserResponse
        + login(LoginRequest) : LoginResponse
        + loadUserByUsername(String) : UserDetails
    }

    interface UserRepository {
        + findByEmail(String) : Optional<User>
        + existsByEmail(String) : boolean
        + existsByCpf(String) : boolean
    }

    class UserController {
        - userService : UserService
        --
        + register(RegisterRequest) : ResponseEntity
        + login(LoginRequest) : ResponseEntity
        + me(Authentication) : ResponseEntity
    }
}

User "1" *-- "many" Role : tem >
UserController --> UserService
UserService --> UserRepository

@enduml